@@ -1,4 +1,7 @@
+AUX 92-pcsc-acsccid.rules 1798 SHA256 a6ba1e5c26d276e4389615bc33510d179dddf6316a6abb7c95b60ac6f6a2184f SHA512 ba4e60dda1eae218646a69646e7944d29476b09ffe19a35241c6d539b4141e05e6a54382f3ac0ae1cc513f37ac12175b73cdf2a29fd3a39217fea7f85018bb3a WHIRLPOOL b49d476fdafa5c47b1eb8cf7ab165511b5d50227b605c848e1f0a42646ae81f29fc764f5f9d37dd1587a16c47dd0ae25c4e4fe1e44c344ff7f267b6a1cc574a5
 DIST acsccid-1.0.8.tar.bz2 371820 SHA256 1c2ff62d8d8621237c2ee97f0786f508289cf5381d3f36a2c313710ae316f29f SHA512 472dee7bd6825a52c3a6e4d1823798a14c7b9738e48c9bd32f2a09da50722bf04fa412f10296a62b0d18329e6b57bdd4d986fa718102485561566464a5ba688d WHIRLPOOL 309f9234cc9d9ace0a2f1fc4a6b2db008133ea83a109992cc8d3a0e21d058b1ca10d3643f9dc7cf662d858053602da7cfe4fad36ff42aedd7bb959a367623b81
+DIST acsccid-1.1.0.tar.bz2 406182 SHA256 f7d24cb3a4d988f1120a5f17a574065d8add7857bd16eda6096b2c5557eea9dd SHA512 86fe694fe7246aa48cd0c7caa0df1df4d365632f16401439e37551e31571967083d5a20daff988a3fca2e89ce6d823d7e86d032f6c608064e70226b06464bad9 WHIRLPOOL ff72029a5208fc17a0ee02390121a5ef8c2b5dd84d25345101fe964ba20d384bcb4f374dadab202e9bed754d10e1a28119dc804453090ff88eaac9f7182511ad
 EBUILD acsccid-1.0.8.ebuild 1005 SHA256 35be45d25fb73e1782ea69c8053b227ff03ccf9c3e756a929835b507d4dcade4 SHA512 e7bd8a922bddb4d00c48bf89a5c2b9fb3ee8754d48941fb474e6c41c1768a01255a7446b609b8105527d5c7d7df9e98fc159d4ddb69958487123544a9bf57fdf WHIRLPOOL 7c5cd4a946998cf3311b31e8d1ea993e98b7837ce73f36e9c64f077b4ea8f0dfa0327e66b4c6a7c2aaec41bf7b563ecb57a6489aae869947545e57db4dedd5d8
-MISC ChangeLog 938 SHA256 239c64cbc0bd4121b9ff402b91872ced21421fca31df530ae8598affa2d74bf0 SHA512 826ee7f41fb2abb2094d67df0b0e5bdb3ebe994df8d2887b0201eaa0065a8b9be17f4975ab38461fb95738b81f7f8e0925690f68e4de14cadb3b1af8a60083c3 WHIRLPOOL 4ca5d656df96463794689c6c363313b97de9d38219add7c472d88dfa85cae3565999629159374719a2a3c51c674932f548b09cd9c87d2e43f8ab32a43aee5f3d
+EBUILD acsccid-1.1.0.ebuild 699 SHA256 58b032435db1c11bc88dbe6a8b598e6882138abb63db7579fdb0eadc627e17f1 SHA512 4265982b198b2bcdb94f21802baac5079e67a2dbdf11af83d930aeff7b6150f05ebac02097dd2cabcb32bef2efff99fdfa189ea3a8ffc7261ef4ae7e57adadd7 WHIRLPOOL 2bcae7dd6a8ff7eddd98d25b3e8f436911408f5e2154287db837737446e546b56184d99c14e0f8705c29af7af4690fdb9610275ccb5573e9ce571e28cd91f4e1
+MISC ChangeLog 1090 SHA256 a80898fd2d125f72d0fd902b4da0cfaadcd0e0f667ecb08b39793dc54b026e76 SHA512 27a91bbc069031d8f954683056b9ad2131d0865996aa9dd1bca0a3695f27e3f68ea961b3f711ead8c4e8560d2f778b9a43d42472ea76da4b1421c7030b3c210e WHIRLPOOL 4cc9bf89b87c25edd79378c0a68747b7981c4d0c20ad6afeaf296c39ba56909382123839985d6c1d30decc29d604d562df0e754bd1945eeeab9effe846a776f8
 MISC metadata.xml 238 SHA256 e9ecafb1042467e378b827325cf91c88400453f4f695a1d203d6a728e25f9cbc SHA512 124797f40af8acf747e452277fe4d87cd21fbb6c27b916a318c76e708d12e56f953dd96e80a3c0b5ef4d6ff2832dc60b26e5bf47a27580c6f6d8307ab2132638 WHIRLPOOL 9d897981697c8d98c269c0eeaf615d5874feb564da469bc2ab05f071316433026ebc74a56c9fd34469eab82df5c4e396e602b3504906ba3682fcca3e6698020b
