@@ -1,6 +1,12 @@
 # ChangeLog for app-crypt/acsccid
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*acsccid-1.1.0 (15 Jan 2015)
+
+  15 Jan 2015; Vincent Hardy <vincent.hardy.be@gmail.com>
+  +acsccid-1.1.0.ebuild +92-pcsc-acsccid.rules:
+  Version bump
 
 *acsccid-1.0.8 (10 Oct 2014)
 
